[package]
name = "rusty-bits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = 'pass-by-reference-value'
path = 'pass-by-reference-value/main.rs'

[[bin]]
name = 'intro-testing'
path = 'intro-testing/main.rs'