[package]
name = "bookrpkg"
version = "0.1.0"
edition = "2021"

[lib]
name = "bookrlib"
path = "src/lib.rs"

[[bin]]
name = "bookr"
path = "src/main.rs"


[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
